# Voicejoystick

mawinHcom/: CMakeLists.txt  README.md  commandprocessor.cpp  commandprocessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialwork.cpp  serialwork.h
mawinHcom/src/: VoskWorker.cpp  VoskWorker.h  commandprocessor.cpp  commandprocessor.h  devicemanager.cpp  devicemanager.h  joystickmanager.cpp  joystickmanager.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ringbuffer.cpp  ringbuffer.h  serialwork.cpp  serialwork.h
